--- a/kustomize/overlays/dev/nginx/ingress.yml
+++ b/kustomize/overlays/dev/nginx/ingress.yml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: your-domain-dev.com
+  - host: domain.com
     http:
       paths:
       - path: /backend
