--- a/kustomize/overlays/dev/backend/deployment-patch.yml
+++ b/kustomize/overlays/dev/backend/deployment-patch.yml
@@ -15,6 +15,13 @@ spec:
       containers:
         - name: backend
           image: backend-image:dev
+          resources:
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
           readinessProbe:
             httpGet:
               path: /health
