--- a/kustomize/overlays/prod/backend/deployment-patch.yml
+++ b/kustomize/overlays/prod/backend/deployment-patch.yml
@@ -15,6 +15,13 @@ spec:
       containers:
         - name: backend
           image: backend-image:prod
+          resources:
+            limits:
+              cpu: "125m"
+              memory: "128Mi"
+            requests:
+              cpu: "125m"
+              memory: "64Mi"
           readinessProbe:
             httpGet:
               path: /health
