--- a/kustomize/overlays/dev/backend/deployment-patch.yml
+++ b/kustomize/overlays/dev/backend/deployment-patch.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-deployment
+  namespace: dev-backend
 spec:
   replicas: 1
   strategy:
