--- a/kustomize/overlays/dev/nginx/ingress.yml
+++ b/kustomize/overlays/dev/nginx/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: dev-ingress
-  namespace: default
+  namespace: dev-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
