--- a/kustomize/overlays/dev/frontend/deployment-patch.yml
+++ b/kustomize/overlays/dev/frontend/deployment-patch.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
+  namespace: dev-frontend
 spec:
   replicas: 1
   strategy:
@@ -14,7 +15,6 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: frontend
-          image: frontend-image:dev
           ports:
             - containerPort: 3000
           readinessProbe:
